    DEBEMAIL. (LP: #665202)
  * Add the beginnings of a test suite. (LP: #690386)
    - Switch to setuptools, to support setup.py test.
    - Test for that every script can run --help and return 0.
    - 404main, merge-changelog, pull-debian-debdiff, pull-debian-source,
      pull-revu-source:
      + Return 0 after showing help.
  * ubuntutools/common.py: Remove https_proxy unsetting code, working around
    LP: #94130.
  * edit-patch: Don't let cat error through if debian/source/format doesn't
    exist.
  * pull-debian-debdiff: Rewrite in Python, and use snapshot.debian.org.
  * pull-lp-source: Support -d (LP: #681699)
  * suspicious-source: Whitelist Python source code.

  [ Michael Bienia ]
  * ubuntutools/lp/lpapicache.py: Allow easier selection of 'staging' as LP
    instance to use (LP: #693060).

  [ Benjamin Drung ]
  * sponsor-patch:
    - Add new --lpinstance and --no-conf options.
    - Support configuration files.
    - Default to a temporary workdir and clean it up (LP: #691467).
    - Fix 'str' object has no attribute 'startwith' crash caused by a typo.
    - Fix crash if uploading to ubuntu without building the package before.
    - Fix: The package was only uploaded if the target was "ubuntu".
  * Recommend bzr-builddeb (used by sponsor-patch for branches).
  * Add most dependencies to Build-Depends for successfully run the tests.
  * Recommend python-gnupginterface (used by dgetlp).
  * update-maintainer: Rewrite completely using python-debian (LP: #666504).

  [ Michael Vogt ]
  * add "add-patch" that provides the non-interactive version of
    edit-patch

 -- Stefano Rivera <stefanor@ubuntu.com>  Sun, 26 Dec 2010 20:14:54 +0200

ubuntu-dev-tools (0.108) experimental; urgency=low

  [ Stefano Rivera ]
  * lp-shell, import-bug-from-debian:
    Use the 'production' LP instance instead of 'edge' (which is going away).
  * pbuilder-dist:
    - Fix typo in local archive support, introduced in 0.107.