@@ -12,6 +12,7 @@ Build-Depends: dctrl-tools,
                libapt-pkg-perl,
                libwww-perl,
                lsb-release,
+               pylint,
                python-all (>= 2.6.5-13~),
                python-apt (>= 0.7.93~),
                python-debian (>= 0.1.15),
