@@ -1,0 +1,40 @@
+# test_pylint.py - Run pylint in errors-only mode.
+#
+# Copyright (C) 2010, Stefano Rivera <stefanor@ubuntu.com>
+#
+# Permission to use, copy, modify, and/or distribute this software for any
+# purpose with or without fee is hereby granted, provided that the above
+# copyright notice and this permission notice appear in all copies.
+#
+# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH
+# REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY
+# AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
+# INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
+# LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR
+# OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
+# PERFORMANCE OF THIS SOFTWARE.
+
+import os
+import subprocess
+
+import setup
+from ubuntutools.test import unittest
+
+class PylintTestCase(unittest.TestCase):
+    def test_pylint(self):
+        "Test: Run pylint on Python source code"
+        files = ['ubuntutools']
+        for script in setup.scripts:
+            f = open(script, 'r')
+            if 'python' in f.readline():
+                files.append(script)
+            f.close()
+        p = subprocess.Popen(['pylint', '--rcfile=ubuntutools/test/pylint.conf',
+                             '-E', '--'] + files,
+                             stdout=subprocess.PIPE, stderr=subprocess.PIPE,
+                             close_fds=True)
+
+        out, err = p.communicate()
+        self.assertEqual(p.wait(), 0,
+                         "pylint returned non-zero.\n"
+                         "Output:\n" + out + err)
