@@ -21,6 +21,7 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
     - 404main, merge-changelog, pull-debian-debdiff, pull-debian-source,
       pull-revu-source:
       + Return 0 after showing help.
+    - Run pylint on Python source code.
   * ubuntutools/common.py: Remove https_proxy unsetting code, working around
     LP: #94130.
   * edit-patch: Don't let cat error through if debian/source/format doesn't
@@ -50,7 +51,7 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
   * add "add-patch" that provides the non-interactive version of
     edit-patch
 
- -- Stefano Rivera <stefanor@ubuntu.com>  Sun, 26 Dec 2010 20:14:54 +0200
+ -- Stefano Rivera <stefanor@ubuntu.com>  Sun, 26 Dec 2010 21:56:07 +0200
 
 ubuntu-dev-tools (0.108) experimental; urgency=low
 
